[package]
name = "pokemon_classifier"
version = "0.0.1"
authors = ["Bruno A. Muciño <mucinoab@gmail.com>"]
edition = "2018"

[dependencies]
telegram-bot = { git = "https://github.com/telegram-rs/telegram-bot.git" }
image = "0.23.12"
reqwest = { version = "0.11.0", features = ["json"] }
log = "0.4.11"
log4rs = "1.0.0"
smol= "1.2.5"
async-compat = "0.1.4"
bytes = "1.0.0"
inline-python = "0.6.0"
serde = "1.0.118"

[profile.release]
lto = "fat"
codegen-units = 1
panic="abort"
