[package]
name = "pokemon_classifier"
version = "0.0.1"
authors = ["Bruno A. Muciño <mucinoab@gmail.com>"]
edition = "2018"

[dependencies]
telegram-bot = { git = "https://github.com/telegram-rs/telegram-bot.git" }
tokio = { version = "1.6.1", features = ["full"] }
image = "0.23.14"
reqwest = { version = "0.11.3", features = ["json"] }
log = "0.4.14"
log4rs = "1.0.0"
bytes = "1.0.1"
inline-python = "0.6.0"
serde = "1.0.126"
futures = "0.3.15"

[profile.release]
lto = "fat"
codegen-units = 1
panic="abort"
